--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-responsive-embed": "^2.1.0",
     "react-scripts": "3.4.1",
     "babel-loader": "8.1.0",
+    "webpack": "4.42.0",
     "react-vertical-timeline-component": "^2.6.2",
     "video-react": "^0.14.1"
   },
