--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "3.4.1",
     "babel-loader": "8.1.0",
     "webpack": "4.42.0",
+    "webpack-dev-server": "3.10.3",
     "react-vertical-timeline-component": "^2.6.2",
     "video-react": "^0.14.1"
   },
