--- a/package.json
+++ b/package.json
@@ -9,25 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.832.0",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
-    "catalog": "^3.6.0",
-    "express": "^4.17.1",
-    "get-random-quote": "^1.1.3",
-    "googleapis": "^39.2.0",
     "minio": "^8.0.5",
     "moment": "^2.25.3",
     "next": "14.0.0",
     "particles-bg": "^2.5.0",
-    "random-quotes": "^1.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-github-corner": "^2.3.0",
+    "react-intersection-observer": "^9.16.0",
     "react-loader-spinner": "^3.1.14",
-    "react-responsive-embed": "^2.1.0",
-    "react-vertical-timeline-component": "^2.6.2",
-    "video-react": "^0.14.1"
+    "react-vertical-timeline-component": "^2.6.2"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
